index file is added the radio

--- a/index.html
+++ b/index.html
@@ -2,9 +2,68 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Which Power Puff girl Are YOU? </title>
 </head>
 <body>
-	
+	<ul>
+		<h1>Question #1: What is Your Favorite Color? <h1> <BR>
+		<li> <intput type="radio" name="question1" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question1" id="green" value="green"> <label for="green">Green</label> </li> <BR>
+		<li> <intput type="radio" name="question1" id="blue" value="blue"> <label for="blue">Blue</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #2: What do you Value the MOST? <h1> <BR>
+		<li> <intput type="radio" name="question2" id="power" value="power"> <label for="power">Power</label> </li> <BR>
+		<li> <intput type="radio" name="question2" id="intelligence" value="intelligence"> <label for="intelligence">Intelligence</label> </li> <BR>
+		<li> <intput type="radio" name="question2" id="friendship" value="friendship"> <label for="friendship">Friendship</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #3: When part of a group, which ROLE do you play? <h1> <BR>
+		<li> <intput type="radio" name="question3" id="leader" value="leader"> <label for="leader"></label>Leader </li> <BR>
+		<li> <intput type="radio" name="question3" id="peace" value="peace"> <label for="peace">Peace</label> </li> <BR>
+		<li> <intput type="radio" name="question3" id="hitter" value="hitter"> <label for="hitter">Hitter</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #4: What are you made off? <h1> <BR>
+		<li> <intput type="radio" name="question4" id="sugar" value="sugar"> <label for="sugar">Sugar</label> </li> <BR>
+		<li> <intput type="radio" name="question4" id="spice" value="spice"> <label for="spice">Spice</label> </li> <BR>
+		<li> <intput type="radio" name="question4" id="nice" value="nice"> <label for="nice">Everything Nice</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #5: Which one would be your Special Power? <h1> <BR>
+		<li> <intput type="radio" name="question5" id="ice" value="ice"> <label for="ice">Ice Breath</label> </li> <BR>
+		<li> <intput type="radio" name="question5" id="sonic" value="sonic"> <label for="sonic">Super Sonic Voice</label> </li> <BR>
+		<li> <intput type="radio" name="question5" id="boss" value="boss"> <label for="boss">Who needs super powers! I am a boss already!</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #6: What is your favorite hair accesory? <h1> <BR>
+		<li> <intput type="radio" name="question6" id="bow" value="bow"> <label for="bow">Big Red Bow</label> </li> <BR>
+		<li> <intput type="radio" name="question6" id="pigtails" value="pigtails"> <label for="pigtails">Pigtails</label> </li> <BR>
+		<li> <intput type="radio" name="question6" id="none" value="none"> <label for="none">I don't need accesories! My hair just flows.</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #7: What is your personality like? <h1> <BR>
+		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #8:  What do yo preffer to do? <h1> <BR>
+		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #9:  Time for a battle! Choose your Weapon! <h1> <BR>
+		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+	</ul>
+	<ul>
+		<h1> Question #10: Battle! Choose your favorite villain? <h1> <BR>
+		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+	</ul>
 </body>
 </html>
