index file is finished the radio buttons

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
 	</ul>
 	<ul>
 		<h1> Question #7: What is your personality like? <h1> <BR>
-		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question7" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question7" id="commander" value="commander"> <label for="commander">Commander and Leader!</label> </li> <BR>
+		<li> <intput type="radio" name="question7" id="joy" value="joy"> <label for="joy">Joy and the Laughter!</label> </li> <BR>
+		<li> <intput type="radio" name="question7" id="tough" value="tough"> <label for="tough">Toughest Fighter!</label> </li> <BR>
 	</ul>
 	<ul>
 		<h1> Question #8:  What do yo preffer to do? <h1> <BR>
-		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question8" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question8" id="fight" value="fight"> <label for="fight">Pick fights with those who oppose you.</label> </li> <BR>
+		<li> <intput type="radio" name="question8" id="play" value="play"> <label for="play">Play outside with the woodland creatures.</label> </li> <BR>
+		<li> <intput type="radio" name="question8" id="book" value="book"> <label for="book">Stay inside inside and read a good book.</label> </li> <BR>
 	</ul>
 	<ul>
 		<h1> Question #9:  Time for a battle! Choose your Weapon! <h1> <BR>
-		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question9" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question9" id="rock" value="rock"> <label for="rock">Rock</label> </li> <BR>
+		<li> <intput type="radio" name="question9" id="paper" value="paper"> <label for="paper">Paper</label> </li> <BR>
+		<li> <intput type="radio" name="question9" id="scissors" value="scissors"> <label for="scissors">Scissors</label> </li> <BR>
 	</ul>
 	<ul>
 		<h1> Question #10: Battle! Choose your favorite villain? <h1> <BR>
-		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
-		<li> <intput type="radio" name="question10" id="red" value="red"> <label for="red">Red</label> </li> <BR>
+		<li> <intput type="radio" name="question10" id="Mojo" value="Mojo"> <label for="Mojo">Mojo Jo JO</label> </li> <BR>
+		<li> <intput type="radio" name="question10" id="fuzzy" value="fuzzy"> <label for="fuzzy">Fuzzy Lumpkins</label> </li> <BR>
+		<li> <intput type="radio" name="question10" id="him" value="him"> <label for="him">Him</label> </li> <BR>
 	</ul>
 </body>
 </html>
